Synch with Henry's latest edits plus references

--- a/B8Paper/Makefile
+++ b/B8Paper/Makefile
@@ -5,10 +5,10 @@ TEX = pdflatex
 BIBTEX = bibtex
 
 # LaTeX Head File name
-NAME = spherical_paper
+NAME = B8
 
 # PDF name
-PDFNAME = NuDot_SphericalHarmonics
+PDFNAME = spherical_paper
 
 # SVN Versioning
 #SVN_REVISION = $(shell svn info | grep Revision | awk '{print $$2}')
